Refactor code base.